<resources>
    <string name="app_name">Anderson\'s Tip Calculator</string>
    <string name="people_prompt">Enter number of people</string>
    <string name="subtotal_prompt">Enter subtotal before tax</string>
    <string name="tax_prompt">Enter tax</string>
    <string name="fifteen_tip">15% Tip</string>
    <string name="eighteen_tip">18% Tip</string>
    <string name="calculate">CALCULATE!</string>
    <string name="instruction">Add this amount to respective subtotals</string>
    <string name="next_activity">Add to subtotals --></string>
    <string name="addend">Amount to add: </string>
    <string name="no_input">Missing input values</string>
    <string name="indiv_subtotal">"Individual Subtotal: "</string>
    <string name="plus">ADD!</string>
</resources>
